--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: lxp-bridge Home Assistant add-on repository
 url: https://github.com/joshs85/lxp-bridge
-maintainer: Joshua Spain
+maintainer: Josh Spain <joshs85@users.noreply.github.com>
