--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "lxp-bridge"
 version = "0.13.0"
 authors = ["Chris Elsworth <chris@cae.me.uk>"]
 edition = "2021"
-repository = "https://github.com/celsworth/lxp-bridge"
+repository = "https://github.com/joshs85/lxp-bridge"
 
 [[bin]]
 name = "lxp-bridge"
