--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lxp-bridge"
-version = "0.14.0-dev"
+version = "0.14.0"
 authors = ["Chris Elsworth <chris@cae.me.uk>"]
 edition = "2021"
 repository = "https://github.com/joshs85/lxp-bridge"
